--- a/kubernetes/4-storage/configmaps/configmap-ex1.yml
+++ b/kubernetes/4-storage/configmaps/configmap-ex1.yml
@@ -11,7 +11,9 @@ kind: Pod
 apiVersion: v1 
 metadata:
   name: cm-pod-ex1 
-spec:
+  labels: 
+    app: nginx
+ spec:
   containers:
     - name: cm-pod-cont
       image: nginx
